<resources>
    <string name="app_name">Remind me</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_calendar">Calendar</string>

    <string name="revenue_begin">1st revenue day after last break</string>
    <string name="notification_time">Notification time</string>
    <string name="notification_period">Notification period</string>

    <string name="submit">Submit</string>

    <string name="notification">You have taken your pill?</string>
    <string name="taken">You have already taken your pill today.</string>
    <string name="not_taken">You have not taken your pill today.</string>
    <string name="take">Pill taken today</string>
    <string name="take_not">Pill not taken today</string>
    <string name="app_name_long">Remind me (pill reminder)</string>
    <string name="revenue_days">Revenue days</string>
    <string name="break_days">Break days</string>
    <string name="revenue_break">You have not to take a pill today.</string>
    <string name="hint_timezone">Hint: When changing the timezone it is recommended to edit the notification time, once. Not doing this can lead to incorrect notification times.</string>
    <string name="not_taken_yesterday">You have not taken your pill yesterday.</string>
    <string name="take_yesterday">Pill taken yesterday</string>
    <string name="taken_yesterday">You have taken your pill yesterday.</string>
    <string name="icon_description">main app icon</string>
    <string name="action_today">Today</string>
</resources>
