<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:padding="10dp">

    <TextView
        android:id="@+id/labelRevenueBegin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/revenue_begin" />

    <EditText
        android:id="@+id/editRevenueBegin"
        android:layout_width="215dp"
        android:layout_height="45dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/labelRevenueBegin"
        android:ems="10"
        android:focusable="false"
        android:inputType="date" />

    <TextView
        android:id="@+id/labelRevenueDays"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/editRevenueBegin"
        android:text="@string/revenue_days" />

    <EditText
        android:id="@+id/editRevenueDays"
        android:layout_width="100dp"
        android:layout_height="45dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/labelRevenueDays"
        android:ems="10"
        android:inputType="number" />

    <TextView
        android:id="@+id/labelBreakDays"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editBreakDays"
        android:layout_alignStart="@+id/editBreakDays"
        android:layout_below="@+id/editRevenueBegin"
        android:text="@string/break_days" />

    <EditText
        android:id="@+id/editBreakDays"
        android:layout_width="100dp"
        android:layout_height="45dp"
        android:layout_above="@+id/labelNotificationTime"
        android:layout_alignEnd="@+id/editRevenueBegin"
        android:layout_alignRight="@+id/editRevenueBegin"
        android:ems="10"
        android:inputType="number" />

    <TextView
        android:id="@+id/labelNotificationTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/editRevenueDays"
        android:text="@string/notification_time" />

    <EditText
        android:id="@+id/editNotificationTime"
        android:layout_width="215dp"
        android:layout_height="45dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/labelNotificationTime"
        android:ems="10"
        android:focusable="false"
        android:inputType="time" />

    <TextView
        android:id="@+id/labelNotificationPeriod"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/editNotificationTime"
        android:text="@string/notification_period" />

    <EditText
        android:id="@+id/editNotificationPeriod"
        android:layout_width="215dp"
        android:layout_height="45dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/labelNotificationPeriod"
        android:ems="10"
        android:focusable="false"
        android:inputType="date" />

    <TextView
        android:id="@+id/labelHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/editNotificationPeriod"
        android:layout_marginTop="10dp"
        android:text="@string/hint_timezone" />

</RelativeLayout>